--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -1,6 +1,9 @@
 @import 'tailwindcss';
 @import 'tw-animate-css';
 
+@plugin '../../hero.ts';
+@source '../../node_modules/@heroui/theme/dist/components/**/*.{js,ts,jsx,tsx}';
+
 @custom-variant dark (&:is(.dark *));
 
 :root {
